--- a/src/components/banner/banners.module.scss
+++ b/src/components/banner/banners.module.scss
@@ -1,11 +1,10 @@
 .banner {
   position: relative;
   height: 300px;
-  width: 100%;
-  flex: 1 1 auto;
+
   img {
     object-fit: cover;
     height: 100%;
-    width: 100%;
+    width: 100%
   }
 }
