les 28, add css, fix routing

--- a/src/page/profile/profile-content/profile-content.module.scss
+++ b/src/page/profile/profile-content/profile-content.module.scss
@@ -1,10 +1,15 @@
 .profile_content {
   &__inner {
+    padding: 15px 0;
     display: flex;
   }
 
   &__img {
     margin-right: 25px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
   }
 
   &__name {
