--- a/src/components/members/members-item/members-item.module.scss
+++ b/src/components/members/members-item/members-item.module.scss
@@ -1,17 +1,21 @@
 .members_item {
   display: flex;
-  font-family: "Nunito Sans", Arial, sans-serif;
   align-items: center;
+  text-align: center;
+  justify-content: center;
+  min-width: 150px;
 
   &:not(:last-child) {
   margin-bottom: 10px;
   }
 
   &_img {
+    margin-bottom: 15px;
     img {
       width: 40px;
       height: 40px;
       border-radius: 50%;
+      margin: 0 auto;
     }
   }
 
@@ -19,6 +23,6 @@
     font-size: 16px;
   }
   &_active {
-    color: blue;
+    color: #8224;
   }
 }
