--- a/src/components/messages/messages-item/messages-item.module.scss
+++ b/src/components/messages/messages-item/messages-item.module.scss
@@ -1,2 +1,10 @@
-.content {
+.messages_item {
+  padding: 15px;
+  background-color: #70c1ff;
+  min-width: 350px;
+  border-radius: 10px;
+  color: #fff;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
