--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import-normalize;
 
+:root {
+  --bg-main: #838daa;
+}
+
 *,
 ::after,
 ::before {
@@ -8,14 +12,16 @@
 
 html,
 body {
-
   min-height: 100vh;
 }
 
 body {
+  font-family: "Nunito Sans", Arial, sans-serif;
   overflow-x: hidden;
   margin: 0;
-
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
 }
 
 a {
