--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -1,5 +1,7 @@
 .header {
-  background-color: green;
+  background-color: var(--bg-main);
   min-height: 80px;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
 }
