les 40, send messages

--- a/src/components/messages/messages-item/messages-item.module.scss
+++ b/src/components/messages/messages-item/messages-item.module.scss
@@ -4,7 +4,11 @@
   min-width: 350px;
   border-radius: 10px;
   color: #fff;
+  align-self: flex-start;
   &:not(:last-child) {
     margin-bottom: 10px;
+  }
+  &:nth-child(odd) {
+    align-self: flex-end;
   }
 }
