les 55, request params, pagination

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,5 +1,6 @@
 .button {
   max-width: 150px;
+  width: 100%;
   min-width: 80px;
   background: linear-gradient(to bottom, #6d6e71, black);
   padding: 0 40px;
