--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -2,6 +2,7 @@
   background-color: var(--bg-main);
   min-height: 80px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0 15px;
 }
