--- a/src/components/profile-content/profile-content.module.scss
+++ b/src/components/profile-content/profile-content.module.scss
@@ -5,12 +5,14 @@
     align-items: center;
   }
 
-  &__img {
-    margin-right: 25px;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
+  &__img_control {
+
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+    }
   }
 
   &__name {
