--- a/src/components/preloader/preloader.scss
+++ b/src/components/preloader/preloader.scss
@@ -1,3 +1,12 @@
+#preloader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .preloader {
   position: fixed;
   top: 50%;
